--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <option id="caesar-cipher-method">Cifra de Cesar</option>                            
             </select>
 
-            <input type="number" value="1" id="hidden-input" style="display: none;">   
+            <input type="number" value="0" min="1" max="25" id="hidden-input" style="display: none;">   
         </section>
         
         <section>
@@ -38,8 +38,8 @@
 
         <h2>Entrada e Saida</h2>
         <section>
-            <textarea id="user-input" placeholder="Escreva o que você deseja"></textarea>                                            
-            <textarea id="code-output" placeholder="Aqui vai ser o resultado"></textarea>                                          
+            <textarea id="user-input" placeholder="Escreva o que você deseja" style="resize: none;"></textarea>                                            
+            <textarea id="code-output" placeholder="Aqui vai ser o resultado" style="resize: none;"></textarea>                                          
         </section>
 
         <button id="button">Code Here</button>
