--- a/index.html
+++ b/index.html
@@ -14,32 +14,42 @@
 </head>
 <body>
 
-    <h1>Codificador</h1>
+    <h1>Codificador</h1>    
 
     <form id="form">                                                                                 
-        <h2>Selecione o seu metodo de codificação: </h2>
+        <h2>Selecione o seu método de codificação: </h2>
         <section id="method-container">
-            <select name="method" id="method-option">                                                
-                <option disabled="" selected>Escolha sua opção</option>     
-                <option id="base64-method">Base 64</option>                                          
-                <option id="caesar-cipher-method">Cifra de Cesar</option>                            
+            <select name="method" id="method-option" class="input-option-container">                                                
+                <option disabled="" selected class="input-option">Escolha sua opção</option>     
+                <option id="base64-method" class="input-option">Base 64</option>                                          
+                <option id="caesar-cipher-method" class="input-option">Cifra de Cesar</option>                            
             </select>
 
-            <input type="number" value="1" min="1" max="26" id="hidden-input" style="display: none;">   
+            <input type="number" placeholder="Incremento" min="1" max="26" id="hidden-input" class="input-hidden" style="display: none;">   
         </section>
         
-        <section>
-            <input type="radio" name="encode" id="encoder">                                          
-            <label for="encode">codificar</label>
-            <input type="radio" name="encode" id="decoder">                                          
-            <label for="encode">decodificar</label>
+        <section class="radio-container">
+            <div>
+                <input type="radio" name="encode" id="encoder" class="input-radio">
+                <p></p>CODIFICAR</p>
+            </div>
+
+            <div>
+                <input type="radio" name="encode" id="decoder" class="input-radio">
+                <p>DECODIFICAR</p>
+            </div>
         </section>
 
+        <section class="input-output">
+            <div>
+                <label for="user-input">Entrada</label><br>
+                <textarea id="user-input" placeholder="Escreva o que você deseja codificar" style="resize: none;" class="textarea"></textarea>
+            </div>  
 
-        <h2>Entrada e Saida</h2>
-        <section>
-            <textarea id="user-input" placeholder="Escreva o que você deseja" style="resize: none;"></textarea>                                            
-            <textarea id="code-output" placeholder="Aqui vai ser o resultado" style="resize: none;"></textarea>                                          
+            <div>
+                <label for="code-output">Saída</label><br>
+                <textarea id="code-output" placeholder="Resultado" style="resize: none;" class="textarea"></textarea>
+            </div>                                          
         </section>
 
         <button id="button">Code Here</button>
